# aegis

./: .codacy.yml  .gitignore  AGENTS.md  README.md  SPEC.md  pyproject.toml  specs.md
.cursor/rules/: 001-security.mdc  150-performance.mdc  210-business-rules.mdc  audit.mdc  debugging.mdc
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.kiro/specs/v2-overhaul/: design.md  requirements.md  tasks.md
.opencode/state/: guard-mode.json
.sisyphus/plans/: v2-overhaul.md
docs/: ARCHITECTURE.md  SECURITY.md  setup-guide.md
docs/superpowers/plans/: 2026-04-16-llm-autonomous-review-system.md  2026-04-19-aegis-v2-multiagent.md
docs/superpowers/specs/: 2026-04-16-llm-autonomous-review-system-design.md  2026-04-17-aegis-v2-multiagent-design.md
specs/: tasks.md
src/cli/: main.py
src/core/: config.py  orchestrator.py  protocols.py  types.py
src/plugins/agents/: dispatcher.py  protocol.py  watcher.py
src/plugins/rules/: generator.py
src/plugins/rules/templates/: business_rules.yaml  performance.yaml  (+1 more)
src/plugins/security/: middleware.py  model_armor.py
src/plugins/sync/: drive_client.py  notebook_sync.py  report_writer.py
tests/integration/: conftest.py  test_security_pipeline.py  test_sync_pipeline.py
tests/scratch/: test_report_writer_validation.py
tests/unit/: conftest.py  test_agent_protocol.py  test_cli.py  test_dispatcher.py  test_drive_client.py  test_model_armor.py  test_notebook_sync.py  test_orchestrator.py  test_protocols.py  test_report_writer.py  test_rule_generator.py  test_types.py  test_validation.py  test_watcher.py
